add tons of stuff

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,6 @@
 FROM ubuntu:16.04
 MAINTAINER Cory Kirkland "cory@securitymetrics.com"
-RUN apt-get update -y
-RUN apt-get install -y python-pip python-dev build-essential
-RUN apt-get install -y libx11-dev fontconfig libxrender-dev libxext-dev
-#RUN apt-get install freetype
+RUN apt-get update -y && apt-get install -y python-pip python-dev build-essential libx11-dev fontconfig libxrender-dev libxext-dev wget
 ADD . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
