starting to try chrome headless

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,30 @@
 FROM ubuntu:16.04
 MAINTAINER Cory Kirkland "cory@securitymetrics.com"
-RUN apt-get update -y && apt-get install -y python-pip python-dev build-essential libx11-dev fontconfig libxrender-dev libxext-dev wget
+# Install deps + add Chrome Stable + purge all the things
+RUN apt-get update && apt-get install -y \
+    apt-transport-https \
+    ca-certificates \
+    curl \
+    gnupg \
+    --no-install-recommends \
+    && curl -sSL https://dl.google.com/linux/linux_signing_key.pub | apt-key add - \
+    && echo "deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
+    && apt-get update && apt-get install -y \
+    google-chrome-stable \
+    --no-install-recommends \
+    && apt-get purge --auto-remove -y curl gnupg \
+    && rm -rf /var/lib/apt/lists/*
+
+# Add Chrome as a user
+RUN groupadd -r chrome && useradd -r -g chrome -G audio,video chrome \
+    && mkdir -p /home/chrome && chown -R chrome:chrome /home/chrome
+
+# Run Chrome non-privileged
+USER chrome
+
+
+
+#RUN apt-get update -y && apt-get install -y python-pip python-dev build-essential libx11-dev fontconfig libxrender-dev libxext-dev wget
 ADD . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
