--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,7 @@ services:
     build: ./app
     ports:
      - "5000:5000"
+    security_opt:
+      - seccomp=$HOME/chrome.json
     volumes:
      - ~/projects/html_to_pdf/app:/app
